force-app/main/default/objects/MIX_API_Config__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Configuration used to manage the connection to the MIX api</description>
    <fields>
        <fullName>Base_Url__c</fullName>
        <description>The base url which is used for connection to the environment.</description>
        <label>Base Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Client_Id__c</fullName>
        <description>The client ID which is used to connect to the MIX gateway.</description>
        <label>Client Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Secret__c</fullName>
        <description>The secret key used to access the API</description>
        <label>Client Secret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>MIX API Config</label>
</CustomObject>